export interface Keyboard {
    id: number;
    name: string;
    price: number;
    quantity: number;
  }